tests/ui/traits/const-traits/const-closure-with-indestructible-indestructible.old.stderr
error[E0277]: the trait bound `NotConstDestruct: const Destruct` is not satisfied
  --> $DIR/const-closure-with-indestructible-indestructible.rs:18:16
   |
LL |           i_need(const || {
   |  _________------_^
   | |         |
   | |         required by a bound introduced by this call
LL | |
LL | |             let y = n;
LL | |         })
   | |_________^
   |
note: required by a bound in `i_need`
  --> $DIR/const-closure-with-indestructible-indestructible.rs:13:20
   |
LL | const fn i_need<F: [const] core::marker::Destruct>(x: F) {}
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `i_need`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
